# porous_llm_extra

./: .env.example  .gitignore  README.md  README_EN.md  batch_envalue.py  classify_precursors.py  evalue.py  evalue2.py  filter_csv.py  main.py  ner_envalue.py  pyproject.toml  record_evalue-1023-11.csv  record_evalue-1027-11.csv  record_evalue.csv  record_evalue.json  run_workflow.py  test.py  test_gemini.py
.github/agents/: porous-carbon-batch-verifier.agent.md  porous-carbon-flow.agent.md  porous-carbon-step-1-1.agent.md  porous-carbon-step-1-2.agent.md  porous-carbon-step-1-3.agent.md  porous-carbon-step-1-4.agent.md
.github/prompts/: run-porous-carbon-flow.prompt.md
core/: config.py
datas/: df_core_number_test.csv  evalue_csv.csv
datas/outputs/: evaluation_results.csv  evaluation_results_with_reasons.csv
docs/: architecture_overview.md  csv_filtering_guide.md  rule_based_evaluation_methodology.md
envalue/: convert_record_to_csv.py  envalue_test.py  ner_envalue.py  rule_based_evaluator.py
porous_carbon_info_extra/: api_one_by_one.py
porous_carbon_info_extra/mutil_extra/: CO2_capture_carbon_prompts.py  TextProcess.py  convert_to_csv_co2.py  cvonvert_to_csv_supercap.py  porous_co2_extra.py  porous_supercap_extra.py  prompts_script.py  test.xml
servers/agents/: Validation_Agent.py  base.py  ele_chem_extract.py  evalue_csv.py  generic.py  manager.py  pore_parameter_extract.py  pre_judge.py  proceess_extract.py
servers/core/: config.py
servers/utils/: convert_to_csv.py  field_template.py  gener_prompt.py  one-steps.py  prompts.py  prompts_en.py  (+1 more)
(+2 files in other folders)
